Implement k-HDTCat