@@ -24,19 +24,24 @@ import com.beust.jcommander.Parameter;
 import com.beust.jcommander.internal.Lists;
 
 import org.apache.commons.io.FileUtils;
-import org.rdfhdt.hdt.exceptions.ParserException;
 import org.rdfhdt.hdt.hdt.HDT;
 import org.rdfhdt.hdt.hdt.HDTManager;
 import org.rdfhdt.hdt.hdt.HDTVersion;
 import org.rdfhdt.hdt.listener.ProgressListener;
+import org.rdfhdt.hdt.options.HDTOptions;
+import org.rdfhdt.hdt.options.HDTOptionsKeys;
 import org.rdfhdt.hdt.options.HDTSpecification;
 import org.rdfhdt.hdt.util.StopWatch;
+import org.rdfhdt.hdt.util.listener.ColorTool;
+import org.rdfhdt.hdt.util.listener.MultiThreadListenerConsole;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author Dennis Diefenbach
@@ -44,11 +49,9 @@ import java.util.List;
  */
 public class HDTCat implements ProgressListener {
 
-    public String hdtInput1;
-    public String hdtInput2;
-    public String hdtOutput;
+    private ColorTool colorTool;
 
-    @Parameter(description = "<input HDT1> <input HDT2> <output HDT>")
+    @Parameter(description = "<input HDTs>+ <output HDT>")
     public List<String> parameters = Lists.newArrayList();
 
     @Parameter(names = "-options", description = "HDT Conversion options (override those of config file)")
@@ -56,6 +59,9 @@ public class HDTCat implements ProgressListener {
 
     @Parameter(names = "-config", description = "Conversion config file")
     public String configFile;
+
+    @Parameter(names = "-kcat", description = "Use KCat algorithm, default if the count of input HDTs isn't 2")
+    public boolean kcat;
 
     @Parameter(names = "-index", description = "Generate also external indices to solve all queries")
     public boolean generateIndex;
@@ -66,8 +72,19 @@ public class HDTCat implements ProgressListener {
     @Parameter(names = "-quiet", description = "Do not show progress of the conversion")
     public boolean quiet;
 
-    public void execute() throws IOException {
+    @Parameter(names = "-color", description = "Print using color (if available)")
+    public boolean color;
 
+    private HDT cat(String location, HDTOptions spec, ProgressListener listener) throws IOException{
+        if (kcat) {
+            return HDTManager.catHDT(parameters.subList(0, parameters.size() - 1), spec, listener);
+        } else {
+            return HDTManager.catHDT(location, parameters.get(0), parameters.get(1), spec, listener);
+        }
+    }
+
+
+    public void execute() throws IOException {
         HDTSpecification spec;
         if(configFile!=null) {
             spec = new HDTSpecification(configFile);
@@ -78,35 +95,50 @@ public class HDTCat implements ProgressListener {
             spec.setOptions(options);
         }
 
+        String hdtOutput = parameters.get(parameters.size() - 1);
         File file = new File(hdtOutput);
-        File theDir = new File(file.getAbsolutePath()+"_tmp");
+
+        String locationOpt = spec.get(HDTOptionsKeys.HDTCAT_LOCATION);
+
+        if (locationOpt == null) {
+            locationOpt = file.getAbsolutePath()+"_tmp";
+            spec.set(HDTOptionsKeys.HDTCAT_LOCATION, locationOpt);
+        }
+
+        File theDir = new File(locationOpt);
         Files.createDirectories(theDir.toPath());
         String location = theDir.getAbsolutePath()+"/";
 
-        try (HDT hdt = HDTManager.catHDT(location,hdtInput1, hdtInput2 , spec,this)) {
+        ProgressListener listenerConsole =
+                !quiet ? (kcat ? new MultiThreadListenerConsole(color) : this)
+                        : null;
+        StopWatch startCat = new StopWatch();
+        try (HDT hdt = cat(location, spec, listenerConsole)) {
+            colorTool.logValue("Files cat in .......... ", startCat.stopAndShow(), true);
+            assert hdt != null;
             // Show Basic stats
             if(!quiet){
-                System.out.println("Total Triples: "+hdt.getTriples().getNumberOfElements());
-                System.out.println("Different subjects: "+hdt.getDictionary().getNsubjects());
-                System.out.println("Different predicates: "+hdt.getDictionary().getNpredicates());
-                System.out.println("Different objects: "+hdt.getDictionary().getNobjects());
-                System.out.println("Common Subject/Object:"+hdt.getDictionary().getNshared());
+                colorTool.logValue("Total Triples ......... ", "" + hdt.getTriples().getNumberOfElements());
+                colorTool.logValue("Different subjects .... ", "" + hdt.getDictionary().getNsubjects());
+                colorTool.logValue("Different predicates .. ", "" + hdt.getDictionary().getNpredicates());
+                colorTool.logValue("Different objects ..... ", "" + hdt.getDictionary().getNobjects());
+                colorTool.logValue("Common Subject/Object . ", "" + hdt.getDictionary().getNshared());
             }
 
             // Dump to HDT file
             StopWatch sw = new StopWatch();
             hdt.saveToHDT(hdtOutput, this);
-            System.out.println("HDT saved to file in: "+sw.stopAndShow());
-            Files.delete(Paths.get(location+"dictionary"));
-            Files.delete(Paths.get(location+"triples"));
+            colorTool.logValue("HDT saved to file in .. ", sw.stopAndShow());
+            Files.deleteIfExists(Path.of(location + "dictionary"));
+            Files.deleteIfExists(Path.of(location+"triples"));
             FileUtils.deleteDirectory(theDir);
 
 
             // Generate index and dump it to .hdt.index file
             sw.reset();
-            if(generateIndex) {
+            if (generateIndex) {
                 HDTManager.indexedHDT(hdt,this);
-                System.out.println("Index generated and saved in: "+sw.stopAndShow());
+                colorTool.logValue("Index generated and saved in ", sw.stopAndShow());
             }
         }
 
@@ -124,29 +156,31 @@ public class HDTCat implements ProgressListener {
         }
     }
 
-    @SuppressWarnings("deprecation")
     public static void main(String[] args) throws Throwable {
         HDTCat hdtCat = new HDTCat();
-        System.out.println("Welcome to hdtCat!");
-        System.out.println("This tool was developed by Dennis Diefenbach and Jośe M. Giḿenez-Garćıa");
-        JCommander com = new JCommander(hdtCat, args);
+        JCommander com = new JCommander(hdtCat);
+        com.parse(args);
         com.setProgramName("hdtCat");
+        hdtCat.colorTool = new ColorTool(hdtCat.color, hdtCat.quiet);
 
-        if(hdtCat.parameters.size()==3) {
-            hdtCat.hdtInput1 = hdtCat.parameters.get(0);
-            hdtCat.hdtInput2 = hdtCat.parameters.get(1);
-            hdtCat.hdtOutput = hdtCat.parameters.get(2);
-        } else if (showVersion){
-            System.out.println(HDTVersion.get_version_string("."));
+        hdtCat.colorTool.log("Welcome to hdtCat!");
+        hdtCat.colorTool.log("This tool was developed by Dennis Diefenbach and Jośe M. Giḿenez-Garćıa");
+
+        if (showVersion) {
+            hdtCat.colorTool.log(HDTVersion.get_version_string("."));
             System.exit(0);
-        }
-        else{
+        } else if (hdtCat.parameters.size() > 3) {
+            // force k-cat if we have more than 2 HDTs to cat
+            hdtCat.kcat = true;
+        } else if (hdtCat.parameters.size() < 3) {
             com.usage();
             System.exit(1);
         }
 
-        System.out.println("Cat "+ hdtCat.hdtInput1+" and "+ hdtCat.hdtInput2+" to "+ hdtCat.hdtOutput);
-
+        hdtCat.colorTool.log("Cat " + hdtCat.parameters.stream()
+                .limit(hdtCat.parameters.size() - 1)
+                .collect(Collectors.joining(", "))
+                + " to " + hdtCat.parameters.get(hdtCat.parameters.size() - 1));
         hdtCat.execute();
     }
 }
